fix landing redirect on finish

--- a/src/static/css/landing.module.css
+++ b/src/static/css/landing.module.css
@@ -21,8 +21,8 @@
   background-color: white;
   color: black;
   font-size: 1em;
-  margin-top: 0.4em;
-  max-height: 20vh;
+  margin: 0.4em;
+  max-height: 25vh;
   overflow: auto;
   padding: 1em;
 }
